--- a/ss8_validation/bai_tap/validation_song_info/src/main/resources/application.properties
+++ b/ss8_validation/bai_tap/validation_song_info/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/blog?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/validate_song?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=codegym
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
